Lev3_3_Project_css-einführung_Illustration99.99%

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <nav>
         <ul>
             <li><a href="#">why?</a></li>
-            <li><a href="#">illustration</a></li>
-            <li><a href="#">buy</a></li>
+            <li><a href="#sectionfour">illustration</a></li>
+            <li><a href="#footer">buy</a></li>
         </ul>
     </nav>
     <section id="sectionfirst">
@@ -96,7 +96,7 @@
         <button class="thirdbutton">Become Member</button>
     </article>
 </section>
-<footer>
+<footer id="footer">
     <h1>any absurd suggestions?</h1>
     <p class="last">Email</p>
     <a href="#">super@super.de</a>
